# rust-realtime

./: README.md
client/: Cargo.toml
client/src/: main.rs  serializers.rs  singnature.rs
realtime/: Cargo.toml
realtime/src/: aggregator.rs  authentication.rs  main.rs  serializers.rs
