[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3.30"
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.17.8"
base64 = "0.22.1"
